--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,18 +2,22 @@
 @tailwind utilities;
 
 :root {
-  --background: #f3f4f6;
-  --foreground: #101828;
+  --background: #ffffff;
+  --foreground: #000000;
+  --blockcolor: #f3f4f6;
+  --highlight-color: #e5e7eb;
   --border-color: #d1d5dc; /* 밝은 테두리 색 */
-  --text-color: #e5e7eb;
+  --text-color: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #101828;
-    --foreground: #f3f4f6;
+    --background: #000000;
+    --foreground: #ffffff;
+    --blockcolor: #101828;
+    --highlight-color: #364153;
     --border-color: #4a5568; /* 어두운 테두리 색 */
-    --text-color: #364153;
+    --text-color: #ffffff;
   }
 }
 
@@ -29,5 +33,19 @@ body {
   }
   .text-default {
     @apply text-[var(--text-color)];
+  }
+  .background-default {
+    @apply bg-[var(--blockcolor)];
+  }
+  .highlight {
+    @apply bg-[var(--highlight-color)];
+  }
+  /* 스크롤바 숨기기 (Chrome, Edge, Safari) */
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  /* Firefox */
+  .scrollbar-hide {
+    scrollbar-width: none;
   }
 } 
