--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,15 @@
 @import "tailwindcss";
 @tailwind utilities;
 
+::-webkit-scrollbar {
+    display: none;
+}
+
+/* Firefox */
+html {
+    scrollbar-width: none; /* Firefox */
+}
+
 /* === 색상 변수 === */
 :root {
     --background: #f9fafb;        /* Light BG */
@@ -77,7 +86,6 @@ body {
     .primary {
         @apply bg-[var(--primary-color)];
     }
-
     /* 글래스모피즘 카드 */
     .glass-default {
         @apply backdrop-blur bg-[var(--blockcolor)]/15 border border-[var(--border-color)] shadow-lg;
