--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,10 @@
 html {
     scrollbar-width: none; /* Firefox */
 }
+iframe {
+    height: 100%;
+    width: 100%;
+}
 
 /* === 색상 변수 === */
 :root {
